[package]
name = "cmus-notify"
version = "0.0.3"
edition = "2021"
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
description = "A simple notification daemon for cmus"
repository = "https://github.com/anas-elgarhy/cmus-notify"
license = "MIT"
keywords = [
    "cmus",
    "notify",
    "notification",
    "notification-cmus",
    "notify-cmus",
]
categories = [
    "command-line-utilities",
    "multimedia"
]
exclude = [
    "docs/*",
    "tests/*",
    "justfile",
]
include = [
    "Cargo.toml",
    "src/**/*",
    "README.md",
    "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.195"
id3 = "1.10.0"
lrc = { version = "0.1.8", optional = true }
notify-rust = { version = "4.10.0", features = ["images"] }
image = "0.24.7"
regex = "1.10.2"
typed-builder = "0.18.0"
log = { version = "0.4.20", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
thiserror = "1.0.59"
parse-display = "0.8.2"
clap-markdown = { version = "0.1.3", optional = true }

[dependencies.clap]
version = "4.4.13"
features = ["wrap_help", "cargo", "usage", "derive", "suggestions", "color"]

[dependencies.confy]
version = "0.5.1"
default-features = false
features = ["toml_conf"]

[features]
lyrics = ["lrc"]
debug = ["log", "pretty_env_logger"]
docs = ["clap-markdown"]

[dev-dependencies]
test-context = "0.1.4"
