[package]
name = "cmus-notify"
version = "0.0.3"
edition = "2021"
rust-version = "1.80.1"
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
description = "A simple notification daemon for cmus"
repository = "https://github.com/anas-elgarhy/cmus-notify"
license = "MIT"
keywords = [
    "cmus",
    "notify",
    "notification",
    "notification-cmus",
    "notify-cmus",
]
categories = [
    "command-line-utilities",
    "multimedia"
]
exclude = [
    "docs/*",
    "tests/*",
    "justfile",
]
include = [
    "Cargo.toml",
    "src/**/*",
    "README.md",
    "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
id3 = "1.14"
lrc = { version = "0.1.8", optional = true }
notify-rust = { version = "4.11", features = ["images"] }
image = "0.25"
regex = "1.11"
typed-builder = "0.20"
log = { version = "0.4", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
thiserror = "1.0"
parse-display = "0.10"
clap-markdown = { version = "0.1", optional = true }

[dependencies.clap]
version = "4.5"
features = ["wrap_help", "cargo", "usage", "derive", "suggestions", "color"]

[dependencies.confy]
version = "0.6"
default-features = false
features = ["toml_conf"]

[features]
lyrics = ["lrc"]
debug = ["log", "pretty_env_logger"]
docs = ["clap-markdown"]

[dev-dependencies]
test-context = "0.3"
